Bug 631192. Overlay with status messages is misaligned with aero glass in non-maximized windows. r+a=gavin
UltraBlame original commit: dd1474517009c71fbb6a46e9c86f9c05c7aab5da

--- a/browser/themes/winstripe/browser/browser-aero.css
+++ b/browser/themes/winstripe/browser/browser-aero.css
@@ -2312,6 +2312,42 @@ none
 ;
 }
 #
+main
+-
+window
+[
+sizemode
+=
+normal
+]
+:
+not
+(
+[
+inFullscreen
+=
+true
+]
+)
+.
+statuspanel
+-
+inner
+{
+padding
+-
+left
+:
+1px
+;
+padding
+-
+right
+:
+1px
+;
+}
+#
 allTabs
 -
 panel
